--- a/src/Hangfire.EntityFramework/project.json
+++ b/src/Hangfire.EntityFramework/project.json
@@ -8,6 +8,9 @@
       "dependencies": {
         "EntityFramework": "6.1.3",
         "HangFire.Core": "1.6.8"
+      },
+      "frameworkAssemblies": {
+        "System.Data": "4.0.0.0"
       }
     }
   },
