--- a/src/Hangfire.EntityFramework/Hangfire.EntityFramework.csproj
+++ b/src/Hangfire.EntityFramework/Hangfire.EntityFramework.csproj
@@ -28,7 +28,8 @@
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
     <PackageReference Include="EntityFramework" Version="6.1.3" />
-    <PackageReference Include="HangFire.Core" Version="1.6.14" />
+    <PackageReference Include="HangFire.Core" Version="1.6.15" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <Reference Include="System.Data" />
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
