--- a/test/Hangfire.EntityFramework.Tests/Hangfire.EntityFramework.Tests.csproj
+++ b/test/Hangfire.EntityFramework.Tests/Hangfire.EntityFramework.Tests.csproj
@@ -18,18 +18,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.1.3" />
+    <PackageReference Include="HangFire.Core" Version="1.6.15" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="Moq" Version="4.7.25" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.console" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
-    <PackageReference Include="Moq" Version="4.7.25" />
-    <PackageReference Include="xunit" Version="2.2.0" />
     <Reference Include="System.Transactions" />
     <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-    <PackageReference Include="EntityFramework" Version="6.1.3" />
-    <PackageReference Include="HangFire.Core" Version="1.6.14" />
   </ItemGroup>
 
   <ItemGroup>
