Move test database initializer configuration to the App.config

--- a/test/Hangfire.EntityFramework.Tests/App.config
+++ b/test/Hangfire.EntityFramework.Tests/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+  </configSections>
   <connectionStrings>
     <add name="Hangfire.EntityFramework.Tests" providerName="System.Data.SqlClient" connectionString="Server=(localdb)\mssqllocaldb;Database=Hangfire.EntityFramework.Tests;Integrated Security=true;"/>
   </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb"/>
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+    <contexts>
+      <context type="Hangfire.EntityFramework.HangfireDbContext, Hangfire.EntityFramework">
+        <databaseInitializer type="System.Data.Entity.DropCreateDatabaseIfModelChanges`1[[Hangfire.EntityFramework.HangfireDbContext, Hangfire.EntityFramework]], EntityFramework, Version=6.0.0.0, PublicKeyToken=b77a5c561934e089" />
+      </context>
+    </contexts>
+  </entityFramework>
 </configuration>
