Install Microsoft.CodeAnalysis.FxCopAnalyzers 2.3.0-beta1 an fix a few code analysis issues

--- a/src/Hangfire.EntityFramework/Hangfire.EntityFramework.csproj
+++ b/src/Hangfire.EntityFramework/Hangfire.EntityFramework.csproj
@@ -26,9 +26,14 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <Features>IOperation</Features>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="HangFire.Core" Version="1.6.17" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.3.0-beta1" />
     <PackageReference Include="Microsoft.Net.Compilers" Version="2.4.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <Reference Include="System.Data" />
