--- a/test/Hangfire.EntityFramework.Tests/Hangfire.EntityFramework.Tests.csproj
+++ b/test/Hangfire.EntityFramework.Tests/Hangfire.EntityFramework.Tests.csproj
@@ -13,6 +13,14 @@
     <RootNamespace>Hangfire.EntityFramework</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <NoWarn>CA1707</NoWarn>
+  </PropertyGroup>
+  
+  <PropertyGroup>
+    <Features>IOperation</Features>
+  </PropertyGroup>
+  
   <ItemGroup>
     <ProjectReference Include="..\..\src\Hangfire.EntityFramework\Hangfire.EntityFramework.csproj" />
   </ItemGroup>
@@ -30,9 +38,6 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <Reference Include="System.Transactions" />
     <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <ItemGroup>
   </ItemGroup>
 
   <ItemGroup>
