--- a/src/Hangfire.EntityFramework/Hangfire.EntityFramework.csproj
+++ b/src/Hangfire.EntityFramework/Hangfire.EntityFramework.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\..\common.props" />
+
   <PropertyGroup>
     <Description>Entity Framework SQL provider-neutral job storage implementation for Hangfire (http://hangfire.io).</Description>
-    <Copyright>Copyright (c) 2017 Sergey Zhigunov</Copyright>
     <AssemblyTitle>Hangfire Entity Framework Storage</AssemblyTitle>
-    <NeutralLanguage>en-US</NeutralLanguage>
-    <VersionPrefix>0.1</VersionPrefix>
-    <Authors>Sergey Zhigunov</Authors>
     <TargetFramework>net45</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -20,9 +18,6 @@
     <PackageLicenseUrl>https://raw.githubusercontent.com/sergezhigunov/Hangfire.EntityFramework/master/LICENSE</PackageLicenseUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/sergezhigunov/Hangfire.EntityFramework.git</RepositoryUrl>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
-    <Version>0.1.0-alpha1</Version>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
