--- a/common.props
+++ b/common.props
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Copyright>Copyright (c) 2017 Sergey Zhigunov</Copyright>
     <NeutralLanguage>en-US</NeutralLanguage>
-    <VersionPrefix>0.1</VersionPrefix>
+    <VersionPrefix>0.2</VersionPrefix>
     <Authors>Sergey Zhigunov</Authors>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
-    <Version>0.1.0-alpha1</Version>
+    <AssemblyVersion>0.2.0.0</AssemblyVersion>
+    <FileVersion>0.2.0.0</FileVersion>
+    <Version>0.2.0-beta1</Version>
   </PropertyGroup>
   
 </Project>
