Add release note reference to the Hangfire.EntityFramework package

--- a/src/Hangfire.EntityFramework/Hangfire.EntityFramework.csproj
+++ b/src/Hangfire.EntityFramework/Hangfire.EntityFramework.csproj
@@ -23,6 +23,7 @@
 
   <PropertyGroup>
     <Features>IOperation</Features>
+    <PackageReleaseNotes>https://github.com/sergezhigunov/Hangfire.EntityFramework/releases</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
